--- a/ms-logistica-entrega/src/main/resources/application.properties
+++ b/ms-logistica-entrega/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuração do Hibernate e JPA
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 
