testes unitarios e componentes

--- a/ms-logistica-entrega/src/main/resources/application.properties
+++ b/ms-logistica-entrega/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.cloud.openfeign.enabled=true
 spring.config.import=optional:configserver:
 
+spring.profiles.active=@spring.profiles.active@
+
+
