--- a/ms-logistica-entrega/pom.xml
+++ b/ms-logistica-entrega/pom.xml
@@ -94,6 +94,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Jackson para converter objetos em JSON (opcional) -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<!-- Spring Cloud Stream Test Binder -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -128,18 +134,40 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-junit-jupiter</artifactId>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.assertj</groupId>
+				<artifactId>assertj-core</artifactId>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
-	</dependencyManagement>
 
+	</dependencyManagement>
 	<build>
 		<plugins>
+			<!-- Plugin do Spring Boot -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!-- Plugin do Maven Surefire -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
 		</plugins>
 	</build>
-
 	<repositories>
 		<repository>
 			<id>central</id>
