--- a/ms-logistica-entrega/src/main/resources/application.properties
+++ b/ms-logistica-entrega/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 # Configurações de Conexão com o Banco MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/logistica_entrega?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/logistica_entrega?useSSL=false&allowPublicKeyRetrieval=true}
+#spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/logistica_entrega?useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuração do Hibernate e JPA
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
-
 spring.jpa.show-sql=true
 
 # Configurações de Pool de Conexões (opcional)
@@ -16,7 +15,3 @@ spring.datasource.hikari.maximum-pool-size=10
 
 spring.cloud.openfeign.enabled=true
 spring.config.import=optional:configserver:
-
-spring.profiles.active=@spring.profiles.active@
-
-
